fixed shift to top alert menu device

--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -1,3 +1,7 @@
+.top_header {
+  padding-top: var(--ion-safe-area-top, 0);
+}
+
 ion-content {
   --padding-top: 40%;
   --padding-start: 10%;
